# sidecar

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  README.md  deny.toml  justfile  rust-toolchain.toml  rustfmt.toml
configs/: config.example.yaml  config.yaml
crates/adapters/put_inbox/: Cargo.toml
crates/adapters/put_inbox/src/: builder.rs  lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  peer.rs
crates/coordinator/coordinator/: Cargo.toml
crates/coordinator/coordinator/src/: builder.rs  builder_client.rs  coordinator.rs  lib.rs  nonce_manager.rs
crates/coordinator/coordinator/src/decision/: mod.rs  publisher.rs  standalone.rs
crates/coordinator/coordinator/src/handlers/: builder_control.rs  builder_poll.rs  decision.rs  forwarded_xt.rs  mailbox.rs  mod.rs  peer_vote.rs  rollback.rs  start_instance.rs  start_period.rs
crates/coordinator/coordinator/src/model/: chain_overlay.rs  mod.rs  ordering.rs  pending_xt.rs  xt_status.rs
crates/coordinator/coordinator/src/pipeline/: delivery.rs  mod.rs  simulation.rs  submission.rs
crates/coordinator/coordinator/src/traits/: decision.rs  mod.rs
crates/coordinator/server/: Cargo.toml
crates/coordinator/server/src/: error.rs  lib.rs  router.rs  state.rs
crates/coordinator/server/src/handlers/: ethera.rs  health.rs  metrics.rs  mod.rs  peer.rs  publisher.rs  transactions.rs  xt.rs
crates/mailbox/: Cargo.toml
crates/mailbox/src/: abi.rs  builder.rs  contract.rs  error.rs  lib.rs  matching.rs  overrides.rs  parser.rs  put_inbox.rs  queue.rs  traits.rs  types.rs  wire.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/net/peer/: Cargo.toml
crates/net/peer/src/: coordinator.rs  lib.rs  sender.rs  traits.rs  types.rs
crates/net/publisher/: Cargo.toml
crates/net/publisher/src/: adapter.rs  connection.rs  lib.rs
crates/net/transport/: Cargo.toml
crates/net/transport/src/: client.rs  config.rs  error.rs  framing.rs  lib.rs  server.rs  socket.rs  tls.rs  traits.rs
crates/primitives/: Cargo.toml
crates/primitives-traits/: Cargo.toml
crates/primitives-traits/src/: builder_control.rs  error.rs  lib.rs  mailbox.rs  publisher.rs  put_inbox.rs
crates/primitives/src/: lib.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/src/: conversions.rs  lib.rs  rollup.v2.rs  rollup_v2.rs
crates/simulation/: Cargo.toml
crates/simulation/src/: error.rs  lib.rs  rpc.rs  traits.rs  types.rs
crates/tracing/: Cargo.toml
crates/tracing/src/: lib.rs
