[package]
name = "compose-mailbox"
version = "0.1.0"
description = "Mailbox ABI helpers, dependency matching, and message queue traits for sidecar coordination"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
compose-primitives.workspace = true
compose-primitives-traits.workspace = true
compose-proto.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde_json.workspace = true
alloy.workspace = true
alloy-rpc-types-eth.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tracing.workspace = true
hex.workspace = true
