[package]
name = "compose-tracing"
version = "0.1.0"
description = "Tracing subscriber setup and logging macro re-exports for Compose services"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
