[package]
name = "compose-put-inbox"
version = "0.1.0"
description = "Alloy-based putInbox transaction builder"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
compose-primitives.workspace = true
compose-coordinator.workspace = true
compose-mailbox.workspace = true
alloy.workspace = true
async-trait.workspace = true
tracing.workspace = true
