[package]
name = "compose-peer"
version = "0.1.0"
description = "Peer-sidecar coordination types and HTTP coordinator client abstractions"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
compose-primitives.workspace = true
compose-primitives-traits.workspace = true
compose-proto.workspace = true
compose-transport.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
prost.workspace = true
reqwest.workspace = true
tracing.workspace = true
thiserror.workspace = true
hex.workspace = true
