[package]
name = "compose-transport"
version = "0.1.0"
description = "QUIC transport, framing, and TLS utilities for publisher and sidecar messaging"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
tokio.workspace = true
quinn.workspace = true
rustls.workspace = true
rcgen.workspace = true
prost.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
socket2.workspace = true
